# scribe

./: .gitignore  Makefile  README.md  pyproject.toml
app/: Package.swift  project.yml
app/Scribe/: APIClient.swift  ContentView.swift  Info.plist  ScribeApp.swift
app/Scribe.xcodeproj/: project.pbxproj
app/Scribe/Shared/: APIClient.swift  Models.swift  ScribeApp.swift  ScribeViewModel.swift
app/Scribe/iOS/: IOSContentView.swift  RecorderView.swift
app/Scribe/macOS/: MacRecorderView.swift  macOSContentView.swift
app/ScribeShare/: Info.plist  ShareViewController.swift
backend/: audio.py  devonthink.py  main.py  minutes.py  models.py  transcriber.py
docs/: ROADMAP.md
scripts/: launch.sh
